Grid template defined.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
     <div class="container">
         <header>
             <h1>SnappMobile</h1>
-            <h3>Hello!</h3>
+
         </header>
        
         <!--<main>-->
-        <section class="content-1">Section 1</section>
-        <button>Read more</button>
+        <section class="content-1">Section 1
+            <h3>Hello!</h3>
+            <button>Read more</button>
+        </section>
+        <section class="content-2">Section 2</section>  
+        <section class="content-3">Section 3</section> 
+
         <!-- </main>-->
-        <footer id="footer">
+        <footer id="footer">Contact us
         </footer>
     </div>
 
