Reset of some default rules

--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
 
     <div class="container">
         <header>
-            <h1>SnappMobile</h1>
+            <h3>SnappMobile</h3>
 
         </header>
        
         <!--<main>-->
         <section class="content-1">Section 1
-            <h3>Hello!</h3>
-            <button>Read more</button>
+            <h1>Hello!</h1>
+            <h3>Companies hire us to build fantastic iOS and Android apps.</h3>
+            <button>READ MORE ABOUT US</button>
         </section>
+
+        <!-- For future use
         <section class="content-2">Section 2</section>  
-        <section class="content-3">Section 3</section> 
+        <section class="content-3">Section 3</section> -->
 
         <!-- </main>-->
-        <footer id="footer">Contact us
+        <footer id="footer">Contact us:
         </footer>
     </div>
 
