Grid template edited, nested grid added.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-        
+        <main>
           <header>
             <ul class="logo">
                   <li><a href="http://snappmobile.io/" target="_blank"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
@@ -43,7 +43,7 @@
           <section class="content-2">Section 2</section>  
           <section class="content-3">Section 3</section> -->
 
-        
+        </main>
         <footer id="footer">Contact us:
         </footer>
     </div>
