Styling of header and main section adjusted.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           </header>
        
         
-          <section class="content-1">Section 1
-            <h1>Hello!</h1>
-            <h3>Companies hire us to build fantastic iOS and Android apps.</h3>
-            <button>READ MORE ABOUT US</button>
+          <section class="content-1">
+            <h1 class="inverse">Hello!</h1>
+            <h2 class="inverse">Companies hire us to build fantastic iOS and Android apps.</h2>
+            <button>Read more about us</button>
           </section>
 
         <!-- For future use
