Minor fixes of social icons positioning. Brand colour for mobile status bar was added in HTML head.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snapp Mobile</title>
-    <meta name="description" content="">
+    <meta name="theme-color" content="#4640f2">
+  	<meta name="apple-mobile-web-app-capable" content="yes">
+  	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>SnappMobile</title>
+    <meta name="description" content="SnappMobile - Home">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive-styles.css">
@@ -44,7 +47,8 @@
           <section class="content-3">Section 3</section> -->
 
         </main>
-        <footer id="footer">Contact us:
+        <footer id="footer">
+          <h2>Contact us:</h2>
         </footer>
     </div>
 
