--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
             <h2 class="inverse">Companies hire us to build fantastic iOS and Android apps.</h2>
             <button>Read more about us</button>
           </section>
+        
 
         <!-- For future use
           <section class="content-2">Section 2</section>  
@@ -48,7 +49,34 @@
 
         </main>
         <footer id="footer">
-          <h2>Contact us:</h2>
+            <section class="contacts">
+                <h2>Contact us:</h2>
+                <ul class="contact-info">
+                    <li>
+                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-location.svg"></a>
+                      Munich HQ<br/>Holzstraße 28,<br/>80469 München
+                    </li>
+                    <li>
+                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-mail.svg"></a>
+                      E-mail<br/>hello@snappmobile.io
+                    </li>
+                    <li>
+                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-phone.svg"></a>
+                      Phone<br/>+49 176 7788 3694
+                    </li>
+                    <li>
+                        <a class="icon" href="" target="_blank"><img src="assets/ic-contact-fax.svg"></a>
+                        Fax<br/>[Don't even think about it]
+                      </li>
+                  </ul>
+
+            </section>
+            <ul class="copyright">
+                <li>Impressum <a href="" target="_blank">
+
+                </a></li>
+                <li>Copyright © 2018 Snapp Mobile Germany</li>
+            </ul>
         </footer>
     </div>
 
