Footer items have been updated: links are added, layout is fixed. Link to the medium page has beed added to the button.

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
           <section class="content-1">
             <h1 class="inverse">Hello!</h1>
             <h2 class="inverse">Companies hire us to build fantastic iOS and Android apps.</h2>
-            <button>Read more about us</button>
+            <a href="https://medium.com/snapp-mobile" target="_blank"><button>Read more about us</button></a>
           </section>
         
 
@@ -53,28 +53,35 @@
                 <h2>Contact us:</h2>
                 <ul class="contact-info">
                     <li>
-                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-location.svg"></a>
-                      Munich HQ<br/>Holzstraße 28,<br/>80469 München
+                      <img src="assets/ic-contact-location.svg">
+                      <div>
+                       <h3>Munich HQ</h3>
+                       <a href="https://goo.gl/maps/i1Q9GmbVnsx" target="_blank">Holzstraße 28,<br/>80469 München</a>
+                      </div>
+                    </li>
+                    <li> 
+                      <img src="assets/ic-contact-mail.svg">
+                      <div>
+                       <h3>E-mail</h3><a href="mailto:hello@snappmobile.io">hello@snappmobile.io</a>
+                      </div>
                     </li>
                     <li>
-                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-mail.svg"></a>
-                      E-mail<br/>hello@snappmobile.io
+                      <img src="assets/ic-contact-phone.svg">
+                      <div>
+                       <h3>Phone</h3>+49 176 7788 3694
+                      </div> 
                     </li>
                     <li>
-                      <a class="icon" href="" target="_blank"><img src="assets/ic-contact-phone.svg"></a>
-                      Phone<br/>+49 176 7788 3694
+                        <img src="assets/ic-contact-fax.svg">
+                        <div>
+                         <h3>Fax</h3>[Don't even think about it]
+                        </div>
                     </li>
-                    <li>
-                        <a class="icon" href="" target="_blank"><img src="assets/ic-contact-fax.svg"></a>
-                        Fax<br/>[Don't even think about it]
-                      </li>
                   </ul>
 
             </section>
             <ul class="copyright">
-                <li>Impressum <a href="" target="_blank">
-
-                </a></li>
+                <li><a href="" target="_blank">Impressum</a></li>
                 <li>Copyright © 2018 Snapp Mobile Germany</li>
             </ul>
         </footer>
