Position of copyright footer fixed. Impressum page updated with all the content.

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
 
 <body>
 
-    <div class="container">
-        <main>
-          <header>
+    <div id="page-1" class="container">
+        <main id="main-1">
+          <header id="header-1">
             <ul class="logo">
                   <li><a href="http://snappmobile.io/" target="_blank"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
             </ul>
@@ -37,7 +37,7 @@
        
         
           <section class="content-1">
-            <h1 class="inverse">Hello!</h1>
+            <h1>Hello!</h1>
             <h2 class="inverse">Companies hire us to build fantastic iOS and Android apps.</h2>
             <a href="https://medium.com/snapp-mobile" target="_blank"><button>Read more about us</button></a>
           </section>
@@ -48,7 +48,7 @@
           <section class="content-3">Section 3</section> -->
 
         </main>
-        <footer id="footer">
+        <footer id="footer-1">
             <section class="contacts">
                 <h2>Contact us:</h2>
                 <ul class="contact-info">
