--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,18 @@
     <div id="page-1" class="container">
         <main id="main-1">
           <header id="header-1">
-            <ul class="logo">
+            <div class="icons-wrapper">
+               <ul class="logo">
                   <li><a href="http://snappmobile.io/" target="_blank"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
-            </ul>
-            <ul class="social icons">
+               </ul>
+               <ul class="social icons">
                 <li><a class="icon" href="https://twitter.com/" target="_blank"><img src="assets/ic-social-twitter-inverse.svg"></a></li>
                 <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><img src="assets/ic-social-linkedin-inverse.svg"></a></li>
                 <li><a class="icon" href="https://github.com/" target="_blank"><img src="assets/ic-social-github-inverse.svg"></a></li>
                 <li><a class="icon" href="https://www.apple.com/lae/ios/app-store/" target="_blank"><img src="assets/ic-social-apple-inverse.svg"></a></li>
                 <li><a class="icon" href="https://play.google.com/store" target="_blank"><img src="assets/ic-social-googleplay-inverse.svg"></a></li>
-            </ul>
+               </ul>
+            </div>  
 
           </header>
        
