Minor UI tweaks

--- a/public/impressum.html
+++ b/public/impressum.html
@@ -23,7 +23,7 @@
         <header id="header-2">
                 <div class="icons-wrapper">
                         <ul class="logo">
-                           <li><a href="http://snappmobile.io/" target="_blank"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
+                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
                         </ul>
                      </div>  
             <h1 class="impressum-header">Impressum</h1>
@@ -58,7 +58,7 @@
         
         <footer id="footer-2">
             <ul class="copyright">
-                <li><a href="" target="_blank">Impressum</a></li>
+                <li><a href="impressum.html" target="_self">Impressum</a></li>
                 <li>Copyright © 2018 Snapp Mobile Germany</li>
             </ul>
         </footer>
