--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <header id="header-1">
             <div class="icons-wrapper">
                <ul class="logo">
-                  <li><a href="http://snappmobile.io/" target="_blank"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
+                  <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
                </ul>
                <ul class="social icons">
                 <li><a class="icon" href="https://twitter.com/" target="_blank"><img src="assets/ic-social-twitter-inverse.svg"></a></li>
@@ -83,7 +83,7 @@
 
             </section>
             <ul class="copyright">
-                <li><a href="impressum.html" target="_blank">Impressum</a></li>
+                <li><a href="impressum.html" target="_self">Impressum</a></li>
                 <li>Copyright © 2018 Snapp Mobile Germany</li>
             </ul>
         </footer>
