Hover state across the page was added.

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,26 @@
                   <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
                </ul>
                <ul class="social icons">
-                <li><a class="icon" href="https://twitter.com/" target="_blank"><img src="assets/ic-social-twitter-inverse.svg"></a></li>
-                <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><img src="assets/ic-social-linkedin-inverse.svg"></a></li>
-                <li><a class="icon" href="https://github.com/" target="_blank"><img src="assets/ic-social-github-inverse.svg"></a></li>
-                <li><a class="icon" href="https://www.apple.com/lae/ios/app-store/" target="_blank"><img src="assets/ic-social-apple-inverse.svg"></a></li>
-                <li><a class="icon" href="https://play.google.com/store" target="_blank"><img src="assets/ic-social-googleplay-inverse.svg"></a></li>
+                <li><a class="icon" href="https://twitter.com/" target="_blank">
+                  <img src="assets/ic-social-twitter-inverse.svg"
+                  onmouseover="this.src='assets/ic-social-twitter-inverse-pressed.svg';"
+                  onmouseout="this.src='assets/ic-social-twitter-inverse.svg';">
+                </a></li>
+                <li><a class="icon" href="https://www.linkedin.com/" target="_blank">
+                  <img src="assets/ic-social-linkedin-inverse.svg"
+                  onmouseover="this.src='assets/ic-social-linkedin-inverse-pressed.svg';"
+                  onmouseout="this.src='assets/ic-social-linkedin-inverse.svg';">
+                </a></li>
+                <li><a class="icon" href="https://www.apple.com/lae/ios/app-store/" target="_blank">
+                  <img src="assets/ic-social-apple-inverse.svg"
+                  onmouseover="this.src='assets/ic-social-apple-inverse-pressed.svg';"
+                  onmouseout="this.src='assets/ic-social-apple-inverse.svg';">
+                </a></li>
+                <li><a class="icon" href="https://play.google.com/store" target="_blank">
+                  <img src="assets/ic-social-googleplay-inverse.svg"
+                  onmouseover="this.src='assets/ic-social-googleplay-inverse-pressed.svg';"
+                  onmouseout="this.src='assets/ic-social-googleplay-inverse.svg';">
+                </a></li>
                </ul>
             </div>  
 
