--- a/public/index.html
+++ b/public/index.html
@@ -69,25 +69,28 @@
             <section class="contacts">
                 <h2>Contact us:</h2>
                 <ul class="contact-info">
+                    <a href="https://goo.gl/maps/i1Q9GmbVnsx" target="_blank">
                     <li>
                       <img src="assets/ic-contact-location.svg">
                       <div>
                        <h3>Munich HQ</h3>
-                       <a href="https://goo.gl/maps/i1Q9GmbVnsx" target="_blank">Holzstraße 28,<br/>80469 München</a>
+                       <p>Holzstraße 28,<br/>80469 München</p>
                       </div>
-                    </li>
+                    </li></a>
+                    <a href="mailto:hello@snappmobile.io">
                     <li> 
                       <img src="assets/ic-contact-mail.svg">
                       <div>
-                       <h3>E-mail</h3><a href="mailto:hello@snappmobile.io">hello@snappmobile.io</a>
+                       <h3>E-mail</h3>hello@snappmobile.io
                       </div>
-                    </li>
+                    </li></a>
+                    <a href="tel:+49 176 7788 3694">
                     <li>
                       <img src="assets/ic-contact-phone.svg">
                       <div>
                        <h3>Phone</h3>+49 176 7788 3694
                       </div> 
-                    </li>
+                    </li></a>
                     <li>
                         <img src="assets/ic-contact-fax.svg">
                         <div>
@@ -99,7 +102,7 @@
             </section>
             <ul class="copyright">
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
-                <li>Copyright © 2018 Snapp Mobile Germany</li>
+                <li>Copyright © 2019 Snapp Mobile Germany</li>
             </ul>
         </footer>
     </div>
