Social links were updated, address has been fixed on Impressum page, social icons for mobile resolutions were updated.

--- a/public/impressum.html
+++ b/public/impressum.html
@@ -32,8 +32,8 @@
           <article>
               <h2>Anschrift</h2>
               <span>Snapp Mobile Germany GmbH</span>
-              <span>Sonnenstrasse 23</span>
-              <span>80331 München</span>
+              <span>Holzstraße 28</span>
+              <span>80469 München</span>
               <span>Tel: +49 176 7788 3694</span>
               <span>hello@snappmobile.io</span>
           </article>
