--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,12 @@
                   <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
                </ul>
                <ul class="social icons">
-                <li><a class="icon" href="https://twitter.com/" target="_blank">
+                <li><a class="icon" href="https://twitter.com/snappmobile_io" target="_blank">
                   <img src="assets/ic-social-twitter-inverse.svg"
                   onmouseover="this.src='assets/ic-social-twitter-inverse-pressed.svg';"
                   onmouseout="this.src='assets/ic-social-twitter-inverse.svg';">
                 </a></li>
-                <li><a class="icon" href="https://www.linkedin.com/" target="_blank">
+                <li><a class="icon" href="https://www.linkedin.com/company/snapp-mobile-gmbh" target="_blank">
                   <img src="assets/ic-social-linkedin-inverse.svg"
                   onmouseover="this.src='assets/ic-social-linkedin-inverse-pressed.svg';"
                   onmouseout="this.src='assets/ic-social-linkedin-inverse.svg';">
@@ -42,11 +42,14 @@
                   onmouseover="this.src='assets/ic-social-apple-inverse-pressed.svg';"
                   onmouseout="this.src='assets/ic-social-apple-inverse.svg';">
                 </a></li>
-                <li><a class="icon" href="https://play.google.com/store" target="_blank">
+                <li><a class="icon" href="https://play.google.com/store/apps/developer?id=Snapp+Mobile+Germany+GmbH" target="_blank">
                   <img src="assets/ic-social-googleplay-inverse.svg"
                   onmouseover="this.src='assets/ic-social-googleplay-inverse-pressed.svg';"
                   onmouseout="this.src='assets/ic-social-googleplay-inverse.svg';">
                 </a></li>
+               </ul>
+               <ul class="deck">
+                  <li><a href="index.html" target="_self"><img src="assets/twitter-copy.svg"></a></li>
                </ul>
             </div>  
 
