--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,12 @@
                 </a></li>
                </ul>
                <ul class="deck">
-                  <li><a href="index.html" target="_self"><img src="assets/twitter-copy.svg"></a></li>
+                  <li><a href="index.html" target="_self"><img src="assets/twitter-copy.svg"></a>
+                    <aside class="overlay">
+                        <menu class="menu"></menu>
+                    </aside>
+                  </li>
+                  
                </ul>
             </div>  
 
