Update Google Play link

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                               onmouseover="this.src='assets/ic-social-apple-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-apple-inverse.svg';">
                         </a></li>
-                        <li><a class="icon" href="https://play.google.com/store/apps/developer?id=Snapp+Mobile+Germany+GmbH" target="_blank">
+                        <li><a class="icon" href="https://play.google.com/store/apps/dev?id=8707863073367231888" target="_blank">
                             <img src="assets/ic-social-googleplay-inverse.svg"
                               onmouseover="this.src='assets/ic-social-googleplay-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-googleplay-inverse.svg';">
@@ -54,7 +54,7 @@
                             <label class="modal-close" for="modal-toggle">&#x2715;</label>
                             <ul class="modal-content-list">
                                  <li class="modal-line">
-                                     <a class="modal-line-link" href="https://play.google.com/store/apps/developer?id=Snapp+Mobile+Germany+GmbH" target="_blank">
+                                     <a class="modal-line-link" href="https://play.google.com/store/apps/dev?id=8707863073367231888" target="_blank">
                                          <img class="modal-line-ico" src="assets/ic-social-googleplay-inverse.svg" alt="google play icon">
                                          <p class="modal-text-link">Google Play</p>
                                      </a>
