--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                               onmouseover="this.src='assets/ic-social-linkedin-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-linkedin-inverse.svg';">
                         </a></li>
-                        <li><a class="icon" href="https://www.apple.com/lae/ios/app-store/" target="_blank">
+                        <li><a class="icon" href="https://apps.apple.com/us/developer/snapp-mobile-germany-gmbh/id1250473528" target="_blank">
                             <img src="assets/ic-social-apple-inverse.svg"
                               onmouseover="this.src='assets/ic-social-apple-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-apple-inverse.svg';">
@@ -60,7 +60,7 @@
                                      </a>
                                 </li>
                                 <li class="modal-line">
-                                    <a class="modal-line-link" href="https://www.apple.com/lae/ios/app-store/" target="_blank">
+                                    <a class="modal-line-link" href="https://apps.apple.com/us/developer/snapp-mobile-germany-gmbh/id1250473528" target="_blank">
                                         <img class="modal-line-ico" src="assets/ic-social-apple-inverse.svg" alt="google play icon">
                                         <p class="modal-text-link">App Store</p>
                                     </a>
@@ -130,7 +130,7 @@
             </section>
             <ul class="copyright">
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
-                <li>Copyright © 2019 Snapp Mobile Germany</li>
+                <li>Copyright © 2020 Snapp Mobile Germany</li>
             </ul>
         </footer>
     </div>
