Changed to Snapp Automotive Branding

--- a/public/impressum.html
+++ b/public/impressum.html
@@ -30,6 +30,7 @@
         <main id="main-2">
           <article>
               <h2>Anschrift</h2>
+              <span>Automobilabteilung</span>
               <span>Snapp Mobile Germany GmbH</span>
               <span>Holzstraße 28</span>
               <span>80469 München</span>
@@ -57,7 +58,7 @@
         <footer id="footer-2">
             <ul class="copyright">
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
-                <li>Copyright © 2020 Snapp Mobile Germany</li>
+                <li>Copyright © 2021 Snapp Automotive Germany</li>
             </ul>
         </footer>
     </div>
