--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<!-- SnappMobile Website -->
-<!-- September 2018 -->
+<!-- SnappAutomotive Website -->
+<!-- July 2021 -->
 
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#4640f2">
+    <meta name="theme-color" content="#41406C">
   	<meta name="apple-mobile-web-app-capable" content="yes">
   	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>SnappMobile - Home</title>
-    <meta name="description" content="SnappMobile - Home">
+    <title>SnappAutomotive - Home</title>
+    <meta name="description" content="SnappAutomotive - Home">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive-styles.css">
@@ -22,28 +22,18 @@
             <header id="header-1">
                 <div class="icons-wrapper">
                     <ul class="logo">
-                        <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
+                        <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png"></a></li>
                     </ul>
                     <ul class="social icons">
-                        <li><a class="icon" href="https://twitter.com/snappmobile_io" target="_blank">
+                        <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
                             <img src="assets/ic-social-twitter-inverse.svg"
                               onmouseover="this.src='assets/ic-social-twitter-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-twitter-inverse.svg';">
                         </a></li>
-                        <li><a class="icon" href="https://www.linkedin.com/company/snapp-mobile-gmbh" target="_blank">
+                        <li><a class="icon" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
                             <img src="assets/ic-social-linkedin-inverse.svg"
                               onmouseover="this.src='assets/ic-social-linkedin-inverse-pressed.svg';"
                               onmouseout="this.src='assets/ic-social-linkedin-inverse.svg';">
-                        </a></li>
-                        <li><a class="icon" href="https://apps.apple.com/us/developer/snapp-mobile-germany-gmbh/id1250473528" target="_blank">
-                            <img src="assets/ic-social-apple-inverse.svg"
-                              onmouseover="this.src='assets/ic-social-apple-inverse-pressed.svg';"
-                              onmouseout="this.src='assets/ic-social-apple-inverse.svg';">
-                        </a></li>
-                        <li><a class="icon" href="https://play.google.com/store/apps/dev?id=8707863073367231888" target="_blank">
-                            <img src="assets/ic-social-googleplay-inverse.svg"
-                              onmouseover="this.src='assets/ic-social-googleplay-inverse-pressed.svg';"
-                              onmouseout="this.src='assets/ic-social-googleplay-inverse.svg';">
                         </a></li>
                     </ul>
                     <div class="modal-container">
@@ -53,27 +43,15 @@
                         <div class="modal-content">
                             <label class="modal-close" for="modal-toggle">&#x2715;</label>
                             <ul class="modal-content-list">
-                                 <li class="modal-line">
-                                     <a class="modal-line-link" href="https://play.google.com/store/apps/dev?id=8707863073367231888" target="_blank">
-                                         <img class="modal-line-ico" src="assets/ic-social-googleplay-inverse.svg" alt="google play icon">
-                                         <p class="modal-text-link">Google Play</p>
-                                     </a>
-                                </li>
                                 <li class="modal-line">
-                                    <a class="modal-line-link" href="https://apps.apple.com/us/developer/snapp-mobile-germany-gmbh/id1250473528" target="_blank">
-                                        <img class="modal-line-ico" src="assets/ic-social-apple-inverse.svg" alt="google play icon">
-                                        <p class="modal-text-link">App Store</p>
-                                    </a>
-                                </li>
-                                <li class="modal-line">
-                                    <a class="modal-line-link" href="https://www.linkedin.com/company/snapp-mobile-gmbh" target="_blank">
-                                       <img class="modal-line-ico" src="assets/ic-social-linkedin-inverse.svg" alt="google play icon">
+                                    <a class="modal-line-link" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
+                                       <img class="modal-line-ico" src="assets/ic-social-linkedin-inverse.svg" alt="LinkedIn icon">
                                        <p class="modal-text-link">LinkedIn</p>
                                     </a>
                                </li>
                                 <li class="modal-line">
-                                    <a class="modal-line-link" href="https://twitter.com/snappmobile_io" target="_blank">
-                                       <img class="modal-line-ico" src="assets/ic-social-twitter-inverse.svg" alt="google play icon">
+                                    <a class="modal-line-link" href="https://twitter.com/snappautomotive" target="_blank">
+                                       <img class="modal-line-ico" src="assets/ic-social-twitter-inverse.svg" alt="Twitter icon">
                                        <p class="modal-text-link">Twitter</p>
                                     </a>
                                </li>
@@ -85,8 +63,8 @@
 
             <section class="content-1">
                 <h1>Hello!</h1>
-                <h2 class="inverse">Companies hire us to build fantastic iOS and Android apps.</h2>
-                <a href="https://medium.com/snapp-mobile" target="_blank"><button>Read more about us</button></a>
+                <h2 class="inverse">Companies hire us to build fantastic automotive experiences.</h2>
+                <a href="https://medium.com/snapp-automotive" target="_blank"><button>Read more about us</button></a>
             </section>
 
         <!-- For future use
@@ -106,11 +84,11 @@
                        <p>Holzstraße 28,<br/>80469 München</p>
                       </div>
                     </li></a>
-                    <a href="mailto:hello@snappmobile.io">
+                    <a href="mailto:projects@snappautomotive.io">
                     <li>
                       <img src="assets/ic-contact-mail.svg">
                       <div>
-                       <h3>E-mail</h3>hello@snappmobile.io
+                       <h3>E-mail</h3>projects@snappautomotive.io
                       </div>
                     </li></a>
                     <a href="tel:+49 176 7788 3694">
@@ -130,7 +108,7 @@
             </section>
             <ul class="copyright">
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
-                <li>Copyright © 2020 Snapp Mobile Germany</li>
+                <li>Copyright © 2021 Snapp Automotive Germany</li>
             </ul>
         </footer>
     </div>
