--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 
             <section class="content-1">
                 <h1>Hello!</h1>
-                <h2 class="inverse">Companies hire us to build fantastic automotive experiences.</h2>
+                <h2 class="inverse">We create and integrate amazing automotive experiences.</h2>
                 <a href="https://medium.com/snapp-automotive" target="_blank"><button>Read more about us</button></a>
             </section>
 
