--- a/public/impressum.html
+++ b/public/impressum.html
@@ -22,7 +22,7 @@
         <header id="header-2">
                 <div class="icons-wrapper">
                         <ul class="logo">
-                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.svg"></a></li>
+                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png"></a></li>
                         </ul>
                      </div>  
             <h1 class="impressum-header">Impressum</h1>
