Update contact number
Change from Jasper to Juhani

--- a/public/impressum.html
+++ b/public/impressum.html
@@ -34,7 +34,7 @@
               <span>Snapp Mobile Germany GmbH</span>
               <span>Holzstraße 28</span>
               <span>80469 München</span>
-              <span>Tel: +49 176 7788 3694</span>
+              <span>Tel: tel:+49 176 7089 2893</span>
               <span>hello@snappmobile.io</span>
           </article>
           <article>
