Move html to top level

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header id="header-1">
                 <div class="icons-wrapper">
                     <ul class="logo">
-                        <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png"></a></li>
+                        <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png" alt="Snapp Automotive Logo"></a></li>
                     </ul>
                     <ul class="social icons">
                         <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
