--- a/impressum.html
+++ b/impressum.html
@@ -22,7 +22,7 @@
         <header id="header-2">
                 <div class="icons-wrapper">
                         <ul class="logo">
-                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png"></a></li>
+                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png" alt="Snapp Automotive Logo"></a></li>
                         </ul>
                      </div>  
             <h1 class="impressum-header">Impressum</h1>
@@ -61,8 +61,6 @@
             </ul>
         </footer>
     </div>
-
-    <script src="js/scripts.js"></script>
 
 </body>
 
