--- a/impressum.html
+++ b/impressum.html
@@ -11,7 +11,7 @@
   	<meta name="apple-mobile-web-app-capable" content="yes">
   	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>SnappMobile - Impressum</title>
-    <meta name="description" content="SnappMobile - Home">
+    <meta name="description" content="SnappMobile - Impressum">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive-styles.css">
@@ -21,9 +21,9 @@
     <div id="page-2" class="container">
         <header id="header-2">
                 <div class="icons-wrapper">
-                        <ul class="logo">
-                           <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png" alt="Snapp Automotive Logo"></a></li>
-                        </ul>
+                    <ul class="logo">
+                        <li><a href="index.html" target="_self"><img src="assets/snapp_logo_sm.png" alt="Snapp Automotive Logo"><span class="header_text">Snapp Automotive</span></a></li>
+                    </ul>
                      </div>  
             <h1 class="impressum-header">Impressum</h1>
         </header>
