--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header id="header-1">
                 <div class="icons-wrapper">
                     <ul class="logo">
-                        <li><a href="index.html" target="_self"><img src="assets/ic-logotype-white-no-bounds.png" alt="Snapp Automotive Logo"></a></li>
+                        <li><a href="index.html" target="_self"><img src="assets/snapp_logo_sm.png" alt="Snapp Automotive Logo"><span class="header_text">Snapp Automotive</span></a></li>
                     </ul>
                     <ul class="social icons">
                         <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
@@ -62,9 +62,9 @@
             </header>
 
             <section class="content-1">
-                <h1>Hello!</h1>
-                <h2 class="inverse">We create and integrate amazing automotive experiences.</h2>
-                <a href="https://medium.com/snapp-automotive" target="_blank"><button>Read more about us</button></a>
+                <h1>We create and integrate amazing <span class="emphasis">automotive</span> experiences.</h1>
+                
+                <a href="https://medium.com/snapp-automotive" target="_blank"><button>What we're up to</button></a>
             </section>
 
         <!-- For future use
@@ -74,32 +74,27 @@
         </main>
         <footer id="footer-1">
             <section class="contacts">
-                <h2>Contact us:</h2>
                 <ul class="contact-info">
                     <a href="https://goo.gl/maps/i1Q9GmbVnsx" target="_blank">
                     <li>
-                      <img src="assets/ic-contact-location.svg">
                       <div>
                        <h3>Munich HQ</h3>
-                       <p>Holzstraße 28,<br/>80469 München</p>
+                       <p>Holzstraße 28, 80469 München</p>
                       </div>
                     </li></a>
                     <a href="mailto:projects@snappautomotive.io">
                     <li>
-                      <img src="assets/ic-contact-mail.svg">
                       <div>
                        <h3>E-mail</h3>projects@snappautomotive.io
                       </div>
                     </li></a>
                     <a href="tel:+49 176 7089 2893">
                     <li>
-                      <img src="assets/ic-contact-phone.svg">
                       <div>
                        <h3>Phone</h3>+49 176 7089 2893
                       </div>
                     </li></a>
                     <li>
-                        <img src="assets/ic-contact-fax.svg">
                         <div>
                          <h3>Fax</h3>[Don't even think about it]
                         </div>
