New Assets added Icons behave correctly for mobile views

--- a/impressum.html
+++ b/impressum.html
@@ -22,9 +22,9 @@
         <header id="header-2">
                 <div class="icons-wrapper">
                     <ul class="logo">
-                        <li><a href="index.html" target="_self"><img src="assets/snappLogo.svg" alt="Snapp Automotive Logo"><span class="header_text">Snapp Automotive</span></a></li>
+                        <li><a href="index.html" target="_self"><img src="assets/SnappAutomotive_Original_Logo_White.svg" alt="Snapp Automotive Logo"></a></li>
                     </ul>
-                     </div>  
+                </div>  
             <h1 class="impressum-header">Impressum</h1>
         </header>
         <main id="main-2">
