--- a/index.html
+++ b/index.html
@@ -22,42 +22,23 @@
             <header id="header-1">
                 <div class="icons-wrapper">
                     <ul class="logo">
-                        <li><a href="index.html" target="_self"><img src="assets/snappLogo.svg" alt="Snapp Automotive Logo"><span class="header_text">Snapp Automotive</span></a></li>
+                        <li><a href="index.html" target="_self"><img src="assets/SnappAutomotive_Original_Logo_White.svg" alt="Snapp Automotive Logo"></a></li>
                     </ul>
-                    <ul class="social icons">
-                        <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
-                            <img src="assets/ic-social-twitter-inverse.svg"
-                              onmouseover="this.src='assets/ic-social-twitter-inverse-pressed.svg';"
-                              onmouseout="this.src='assets/ic-social-twitter-inverse.svg';">
-                        </a></li>
-                        <li><a class="icon" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
-                            <img src="assets/ic-social-linkedin-inverse.svg"
-                              onmouseover="this.src='assets/ic-social-linkedin-inverse-pressed.svg';"
-                              onmouseout="this.src='assets/ic-social-linkedin-inverse.svg';">
-                        </a></li>
-                    </ul>
-                    <div class="modal-container">
-                        <input id="modal-toggle" type="checkbox">
-                        <label class="modal-btn" for="modal-toggle"><img src="assets/twitter-copy.svg"></label>
-                        <label class="modal-backdrop" for="modal-toggle"></label>
-                        <div class="modal-content">
-                            <label class="modal-close" for="modal-toggle">&#x2715;</label>
-                            <ul class="modal-content-list">
-                                <li class="modal-line">
-                                    <a class="modal-line-link" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
-                                       <img class="modal-line-ico" src="assets/ic-social-linkedin-inverse.svg" alt="LinkedIn icon">
-                                       <p class="modal-text-link">LinkedIn</p>
-                                    </a>
-                               </li>
-                                <li class="modal-line">
-                                    <a class="modal-line-link" href="https://twitter.com/snappautomotive" target="_blank">
-                                       <img class="modal-line-ico" src="assets/ic-social-twitter-inverse.svg" alt="Twitter icon">
-                                       <p class="modal-text-link">Twitter</p>
-                                    </a>
-                               </li>
-                            </ul>
-                        </div>
-                    </div>
+                    <span class="socialRegular">
+                        <ul class="social icons">
+                            <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
+                                <img src="assets/Twitter Icon_Default State.svg"
+                                onmouseover="this.src='assets/Twitter Icon_Hover State.svg';"
+                                onmouseout="this.src='assets/Twitter Icon_Default State.svg';">
+                            </a></li>
+                            <li><a class="icon" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
+                                <img src="assets/Linkedin Icon_Default State.svg"
+                                onmouseover="this.src='assets/Linkedin Icon_Hover State.svg';"
+                                onmouseout="this.src='assets/Linkedin Icon_Default State.svg';">
+                            </a></li>
+                        </ul>
+                    </span>
+                    
                 </div>
             </header>
 
@@ -73,8 +54,24 @@
 
         </main>
         <footer id="footer-1">
+            <section class="socialSmall">
+                <ul class="social icons">
+                    <li><a class="icon" href="https://twitter.com/snappautomotive" target="_blank">
+                        <img src="assets/Twitter Icon_Default State.svg"
+                          onmouseover="this.src='assets/Twitter Icon_Hover State.svg';"
+                          onmouseout="this.src='assets/Twitter Icon_Default State.svg';">
+                    </a></li>
+                    <li><a class="icon" href="https://www.linkedin.com/company/snapp-automotive" target="_blank">
+                        <img src="assets/Linkedin Icon_Default State.svg"
+                          onmouseover="this.src='assets/Linkedin Icon_Hover State.svg';"
+                          onmouseout="this.src='assets/Linkedin Icon_Default State.svg';">
+                    </a></li>
+                </ul>
+            </section>
             <section class="contacts">
+                
                 <ul class="contact-info">
+
                     <a href="https://goo.gl/maps/i1Q9GmbVnsx" target="_blank">
                     <li>
                       <div>
