Fixed responsive issues
Fixed issue on full width image being too wide for desktop.
Fixed issue on headshots being too narrow on mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 09 2022 12:54:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jun 09 2022 16:00:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62861fa1dcb5c855f364f9c8" data-wf-site="62860b878240b5d1ce5714ed">
 <head>
   <meta charset="utf-8">
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="w-layout-grid container center fade-in-1st">
-        <div id="w-node-aafcd326-2c0d-5e35-fc91-4a54575a6cad-f364f9c8" data-w-id="aafcd326-2c0d-5e35-fc91-4a54575a6cad" class="scaled-wrapper"><img src="images/dash1.jpg" loading="lazy" sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, (max-width: 991px) 6vw, 100vw" srcset="images/dash1-p-500.jpeg 500w, images/dash1-p-800.jpeg 800w, images/dash1-p-1080.jpeg 1080w, images/dash1-p-1600.jpeg 1600w, images/dash1-p-2000.jpeg 2000w, images/dash1-p-2600.jpeg 2600w, images/dash1.jpg 2800w" alt="Dashboard 1" class="image-scaled"></div>
+        <div id="w-node-aafcd326-2c0d-5e35-fc91-4a54575a6cad-f364f9c8" data-w-id="aafcd326-2c0d-5e35-fc91-4a54575a6cad" class="scaled-wrapper"><img src="images/dash1.jpg" loading="lazy" sizes="100vw" srcset="images/dash1-p-500.jpeg 500w, images/dash1-p-800.jpeg 800w, images/dash1-p-1080.jpeg 1080w, images/dash1-p-1600.jpeg 1600w, images/dash1-p-2000.jpeg 2000w, images/dash1-p-2600.jpeg 2600w, images/dash1.jpg 2800w" alt="Dashboard 1" class="image-scaled"></div>
       </div>
       <div id="about-us" class="w-layout-grid container module more-padding bg-black fade-in-1st w-node-cce14d89-9b84-8045-cf54-1a790f791b06-f364f9c8">
         <div class="background-block"><img src="images/bg3.jpg" loading="lazy" sizes="(max-width: 479px) 95vw, (max-width: 767px) 94vw, (max-width: 991px) 95vw, 93vw" srcset="images/bg3-p-500.jpeg 500w, images/bg3-p-800.jpeg 800w, images/bg3-p-1080.jpeg 1080w, images/bg3-p-1600.jpeg 1600w, images/bg3-p-2000.jpeg 2000w, images/bg3.jpg 2800w" alt="Gradient background" class="image-background"></div>
@@ -226,9 +226,9 @@
           <p class="description width-75 fade-in-1st">Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo.</p>
         </div>
         <div id="w-node-a0581b09-5d2a-8245-aa2e-38819921c8ca-f364f9c8" class="module fade-in-1st">
-          <div class="image-module-top"><img src="images/Juhani.jpg" loading="lazy" sizes="(max-width: 479px) 203.15625px, 100vw" srcset="images/Juhani-p-500.jpeg 500w, images/Juhani.jpg 800w" alt="Juhani Lehtimaki" class="image-cover">
+          <div class="image-module-top"><img src="images/Juhani.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, 100vw" srcset="images/Juhani-p-500.jpeg 500w, images/Juhani.jpg 800w" alt="Juhani Lehtimaki" class="image-cover">
             <div class="description-inside">
-              <div>Chief Executive Officer, Founder</div>
+              <div>Chief Executive Officer</div>
             </div>
           </div>
           <div>
@@ -241,7 +241,7 @@
           </div>
         </div>
         <div id="w-node-_02c14bf5-eab9-0836-d612-7d972ded2b03-f364f9c8" class="module fade-in-2nd">
-          <div class="image-module-top"><img src="images/Al.jpg" loading="lazy" sizes="(max-width: 479px) 167.5px, 100vw" srcset="images/Al-p-500.jpeg 500w, images/Al.jpg 800w" alt="Al Sutton" class="image-cover">
+          <div class="image-module-top"><img src="images/Al.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, 100vw" srcset="images/Al-p-500.jpeg 500w, images/Al.jpg 800w" alt="Al Sutton" class="image-cover">
             <div class="description-inside">
               <div class="text-block-7">Chief Technology Officer</div>
             </div>
@@ -256,7 +256,7 @@
           </div>
         </div>
         <div id="w-node-_1e856072-83f4-9ae7-7c85-a58de2ddc3f9-f364f9c8" class="module fade-in-3rd">
-          <div class="image-module-top"><img src="images/Casper.jpg" loading="lazy" sizes="(max-width: 479px) 145.6875px, 100vw" srcset="images/Casper-p-500.jpeg 500w, images/Casper.jpg 800w" alt="Casper Kessels" class="image-cover">
+          <div class="image-module-top"><img src="images/Casper.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, 100vw" srcset="images/Casper-p-500.jpeg 500w, images/Casper.jpg 800w" alt="Casper Kessels" class="image-cover">
             <div class="description-inside">
               <div class="text-block-6">Chief Design Officer</div>
             </div>
