--- a/index.html
+++ b/index.html
@@ -347,14 +347,7 @@
           <div class="margin-bottom">
             <h2 class="eyebrow">Location<br></h2>
             <div class="left description">
-              <a href="https://www.google.de/maps/place/Snapp+Mobile+Germany+GmbH/@48.1289569,11.5657221,17z/data=!3m1!4b1!4m5!3m4!1s0x479ddf51c645b70d:0xd62ba2ef81301b95!8m2!3d48.128956!4d11.5679492" target="_blank" class="text-link-black w-inline-block">
-                <div class="text-underline">Holzstraße 28<br></div>
-                <div class="hover-line"></div>
-              </a>
-              <a href="https://www.google.de/maps/place/Snapp+Mobile+Germany+GmbH/@48.1289569,11.5657221,17z/data=!3m1!4b1!4m5!3m4!1s0x479ddf51c645b70d:0xd62ba2ef81301b95!8m2!3d48.128956!4d11.5679492" target="_blank" class="text-link-black w-inline-block">
-                <div class="text-underline">80469 München, Germany<br></div>
-                <div class="hover-line"></div>
-              </a>
+              <div>Munich, Berlin, London<br></div>
             </div>
           </div>
           <div class="icon-container icon-size-xl bg-white"><img src="images/map-marker-3.svg" loading="lazy" alt="" class="icon"></div>
@@ -392,9 +385,7 @@
               <a id="w-node-_913c938d-378e-3336-6224-657375b3d2ee-699e24ba" href="tel:+4917670892893" class="footer-link w-inline-block">
                 <div>+49 176 7089 2893</div>
               </a>
-              <a id="w-node-_913c938d-378e-3336-6224-657375b3d2f1-699e24ba" href="https://www.google.de/maps/place/Snapp+Mobile+Germany+GmbH/@48.129085,11.5654545,17z/data=!4m5!3m4!1s0x0:0xc9e1fc1308d8e6ee!8m2!3d48.129049!4d11.5678691?shorturl=1" target="_blank" class="footer-link w-inline-block">
-                <div>Holzstraße 28, 80469 München</div>
-              </a>
+              <div class="footer-link w-inline-block">Munich, Berlin, London</div>
             </div>
           </div>
           <div id="w-node-d35063cf-7f41-0cd4-651a-f7f4fa7128d4-699e24ba" class="div-block-12">
